chore: remove custom packages
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/mainsailos/config
+++ b/src/modules/mainsailos/config
@@ -9,5 +9,4 @@
 #### This File is distributed under GPLv3
 ####
 
-[ -n "$MAINSAILOS_DEPS" ] || MAINSAILOS_DEPS="python3-serial tree mc exa bat \
-nload"
+[ -n "$MAINSAILOS_DEPS" ] || MAINSAILOS_DEPS="python3-serial"
