--- a/src/modules/timelapse/config
+++ b/src/modules/timelapse/config
@@ -1,15 +1,20 @@
-#!/bin/bash
-# moonraker-timelapse custompios module
-# https://github.com/mainsail-crew/moonraker-timelapse
-# written by Stephan Wendel aka KwadFan
-# <me@stephanwe.de>
-# GPL V3
-########
-# shellcheck disable=all
+#!/usr/bin/env bash
+#### moonraker-timelapse module
+####
+#### https://github.com/mainsail-crew/moonraker-timelapse
+#### Thanks to Fry Sennberg for this bueatiful "Plugin"
+####
+#### Written by Stephan Wendel aka KwadFan <me@stephanwe.de>
+#### Copyright 2022
+#### https://github.com/mainsail-crew/MainsailOS
+####
+#### This File is distributed under GPLv3
+####
+
 [ -n "$TIMELAPSE_SRC_DIR" ] || TIMELAPSE_SRC_DIR="/home/${BASE_USER}/moonraker-timelapse"
-[ -n "$TIMELAPSE_PYTHON_DIR" ] || TIMELAPSE_TARGET_DIR="/home/${BASE_USER}/moonraker/moonraker/components"
-[ -n "$TIMELAPSE_CONFIG_DIR" ] || TIMELAPSE_CONFIG_DIR="/home/${BASE_USER}/klipper_config"
-[ -n "$TIMELAPSE_TEMPLATE" ] || TIMELAPSE_TEMPLATE="/home/${BASE_USER}/klipper_config/timelapse_template.txt"
+[ -n "$TIMELAPSE_PYTHON_VENV_DIR" ] || TIMELAPSE_PYTHON_VENV_DIR="/home/${BASE_USER}/moonraker/moonraker/components"
+[ -n "$TIMELAPSE_CONFIG_DIR" ] || TIMELAPSE_CONFIG_DIR="/home/${BASE_USER}/printer_data/config"
+[ -n "$TIMELAPSE_TEMPLATE" ] || TIMELAPSE_TEMPLATE="/home/${BASE_USER}/timelapse_template.txt"
 
 [ -n "$TIMELAPSE_REPO_SHIP" ] || TIMELAPSE_REPO_SHIP=https://github.com/mainsail-crew/moonraker-timelapse.git
 [ -n "$TIMELAPSE_REPO_BRANCH" ] || TIMELAPSE_REPO_BRANCH=main
