--- a/src/modules/moonraker/filesystem/home/pi/printer_data/config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/printer_data/config/moonraker.conf
@@ -1,14 +1,12 @@
 [server]
 host: 0.0.0.0
 port: 7125
-# Verbose logging used for debugging . Default False.
-enable_debug_logging: False
 # The maximum size allowed for a file upload (in MiB).  Default 1024 MiB
 max_upload_size: 1024
+# Path to klippy Unix Domain Socket
+klippy_uds_address: ~/printer_data/comms/klippy.sock
 
 [file_manager]
-config_path: ~/klipper_config
-log_path: ~/klipper_logs
 # post processing for object cancel. Not recommended for low resource SBCs such as a Pi Zero. Default False
 enable_object_processing: False
 
@@ -48,3 +46,10 @@ type: web
 channel: stable
 repo: mainsail-crew/mainsail
 path: ~/mainsail
+
+[update_manager mainsail-config]
+type: git_repo
+primary_branch: master
+path: ~/mainsail-config
+origin: https://github.com/mainsail-crew/mainsail-config.git
+managed_services: klipper
