--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -38,27 +38,25 @@ jobs:
         if: steps.current-version.outputs.version != github.event.inputs.version
         run: cat ./src/version
 
+      - name: git add & commit & push
+        if: steps.current-version.outputs.version != github.event.inputs.version
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: './src/version'
+          default_author: github_actions
+          message: 'chore: push version number to v${{ github.event.inputs.version }}'
+          push: true
 
-#
-#      - name: git add & commit & push
-#        if: steps.package-version.outputs.current-version != github.event.inputs.version
-#        uses: EndBug/add-and-commit@v9
-#        with:
-#          add: 'package.json package-lock.json'
-#          default_author: github_actions
-#          message: 'chore: push version number to v${{ github.event.inputs.version }}'
-#          push: true
-
-#  update-master-branch:
-#    needs: ['push-version-number']
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: everlytic/branch-merge@1.1.5
-#        with:
-#          github_token: ${{ secrets.PAT }}
-#          source_ref: 'develop'
-#          target_branch: 'master'
-#          commit_message_template: '[Automated] Merged {source_ref} into target {target_branch}'
+  update-master-branch:
+    needs: ['push-version-number']
+    runs-on: ubuntu-latest
+    steps:
+      - uses: everlytic/branch-merge@1.1.5
+        with:
+          github_token: ${{ secrets.PAT }}
+          source_ref: 'develop'
+          target_branch: 'master'
+          commit_message_template: '[Automated] Merged {source_ref} into target {target_branch}'
 #
 #  release:
 #    needs: ['update-master-branch']
