--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: 'develop'
+          ref: 'master'
 
       - name: Get latest tag
         id: latest_tag
