--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -76,7 +76,7 @@ jobs:
         id: changelog
         with:
           config: ./cliff-release.toml
-          args: ${{ steps.latest_tag.outputs.TAG_NAME }}..HEAD
+          args: -u
 
       - name: Debug output changelog
         run: echo ${{ steps.changelog.outputs.content }}
