--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -137,6 +137,15 @@ jobs:
           echo "image=${IMAGE}" >> $GITHUB_OUTPUT
           echo "date=${NOW}" >> $GITHUB_OUTPUT
 
+      - name: Upload Image
+        if: success()
+        uses: xresloader/upload-to-github-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          release_id: ${{ needs.release.id }}
+          file: ${{ steps.copy-image.outputs.image }}.img
+
       - name: Upload failed Logfile
         if: failure()
         uses: actions/upload-artifact@v3
@@ -154,6 +163,15 @@ jobs:
           echo -e "\e[32mUsing ${CPU_COUNT} Cores for compression...\e[0m"
           xz -efkvz9T"${CPU_COUNT}" ${{ steps.copy-image.outputs.image }}.img
 
+      - name: Upload Compressing Image
+        if: success()
+        uses: xresloader/upload-to-github-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          release_id: ${{ needs.release.id }}
+          file: ${{ steps.copy-image.outputs.image }}.img.xz
+
       - name: Calculating checksums
         id: checksums
         shell: bash
@@ -165,6 +183,15 @@ jobs:
           sha256sum ${{ steps.copy-image.outputs.image }}.img.xz > ${{ steps.copy-image.outputs.image }}.img.xz.sha256
           zip_checksum=`cat ${{ steps.copy-image.outputs.image }}.img.xz.sha256 | awk '{ print $1 }'`
           echo "zip=${zip_checksum}" >> $GITHUB_OUTPUT
+
+      - name: Upload Checksums
+        if: success()
+        uses: xresloader/upload-to-github-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          release_id: ${{ needs.release.id }}
+          file: ${{ steps.copy-image.outputs.image }}.img.sha256;${{ steps.copy-image.outputs.image }}.img.xz.sha256
 
       - name: Calculating filesizes
         id: filesizes
@@ -217,9 +244,30 @@ jobs:
               image_download_size,
               image_download_sha256
             })
-      - name: Get result
-        run: echo "${{steps.json.outputs.result}}"
 
+      - name: Write JSON
+        run: echo "${{steps.json.outputs.result}}" > "./${{ steps.copy-image.outputs.image }}.json"
+
+      - name: Upload JSON
+        if: success()
+        uses: xresloader/upload-to-github-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          release_id: ${{ needs.release.id }}
+          file: ${{ steps.copy-image.outputs.image }}.json
+
+  finish:
+    name: Finish Release
+    needs: [ release, build ]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Publish Release
+        uses: StuYarrow/publish-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          id: ${{ needs.release.outputs.id }}
 
 
 #
