--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -5,8 +5,8 @@ on:
       - "master"
       - "develop"
     paths:
-      - "!src/version"
-      - "src/**"
+      - "src/modules/**"
+      - "src/build_dist"
       - "config/**"
       - ".github/workflows/BuildImages.yml"
     tags-ignore:
