--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -137,8 +137,7 @@ jobs:
         if: always()
         shell: bash
         run: |
-          output="${NOW}"
-          base_name="${ needs.release.outputs.date }-${DIST_NAME}-${DIST_VERSION}
+          base_name="${ needs.release.outputs.date }-${DIST_NAME}-${DIST_VERSION}"
           image="${base_name}-${{ steps.build.outputs.type }}-${{ steps.build.outputs.sbc }}"
           cp repository/src/workspace/*.img $image.img
 
