--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -290,64 +290,49 @@ jobs:
         with:
           tag: ${{ github.event.inputs.version }}
           fileName: "${{ needs.build.outputs.base_name }}-raspberry-*.json"
+          out-file-path: "downloads"
 
       - name: Debug
-        run: ls ./*
+        run: ls ./downloads/*
+
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Run script
+        uses: jannekem/run-python-script-action@v1
+        with:
+          script: |
+            import os, json, shutil
+            with open("rpi-imager.json", "r+") as t:
+              t.truncate(0)
+              t.write('[')
+              for filename in os.scandir('downloads'):
+                print(filename)
+                with open(filename, "r") as f:
+                  content = f.read()
+                  t.write(content)
+                  t.write(',')
+              t.write(']')
+            barak = open("rpi-imager.json", "r+")
+            contentb = barak.read()
+            print(contentb)
+
+      - name: Debug
+        run: cat rpi-imager.json
+
+      - name: Upload JSON
+        if: success()
+        uses: xresloader/upload-to-github-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          release_id: ${{ needs.release.outputs.id }}
+          file: rpi-imager.json
 
 
 
-#
-#  release:
-#    needs: ['update-master-branch']
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Fetch repo
-#        uses: actions/checkout@v3
-#        with:
-#          ref: 'master'
-#          fetch-depth: 0
-#
-#      - name: Install node
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: 18
-#
-#      - name: Install dependencies
-#        run: npm ci
-#
-#      - name: Build
-#        run: npm run build
-#
-#      - name: Move build out of dist
-#        shell: bash
-#        run: mv ./dist/mainsail.zip ./mainsail.zip
-#
-#      - name: Get latest tag
-#        id: latest_tag
-#        shell: bash
-#        run: |
-#          echo "TAG_NAME=$(git describe --tags $(git rev-list --tags --max-count=1))" >> $GITHUB_OUTPUT
-#
-#      - name: Generate a changelog
-#        uses: orhun/git-cliff-action@v1
-#        id: generate-changelog
-#        with:
-#          config: ./cliff-release.toml
-#          args: ${{ steps.latest_tag.outputs.TAG_NAME }}..HEAD
-#
-#      - name: Create release and upload build
-#        uses: softprops/action-gh-release@v1
-#        id: create-release
-#        with:
-#          name: v${{ github.event.inputs.version }}
-#          tag_name: v${{ github.event.inputs.version }}
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          files: ./mainsail.zip
-#          body: ${{ steps.generate-changelog.outputs.content }}
-#
-#      - name: Copy remote configs to dist
-#        shell: bash
-#        run: cp ./remote/* ./dist/
 #
 #      - name: Upload to remote server
 #        uses: SamKirkland/FTP-Deploy-Action@4.3.3
