--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -228,16 +228,16 @@ jobs:
         id: json
         uses: actions/github-script@v6
         env:
-          name: 'Mainsail OS ${{ github.event.inputs.version }}'
-          description: 'Type: ${{ steps.build.outputs.type }}, SBC: ${{ steps.build.outputs.sbc }}'
-          url: 'https://github.com/mainsail-crew/MainsailOS/releases/download/${{ github.event.inputs.version }}/${{ steps.copy-image.outputs.image }}.img.xz'
-          icon: 'https://os.mainsail.xyz/rpi-imager.png'
-          init_format: 'systemd'
+          name: '"Mainsail OS ${{ github.event.inputs.version }}"'
+          description: '"Type: ${{ steps.build.outputs.type }}, SBC: ${{ steps.build.outputs.sbc }}"'
+          url: '"https://github.com/mainsail-crew/MainsailOS/releases/download/${{ github.event.inputs.version }}/${{ steps.copy-image.outputs.image }}.img.xz"'
+          icon: '"https://os.mainsail.xyz/rpi-imager.png"'
+          init_format: '"systemd"'
           release_date: ${{ needs.release.outputs.date }}
           extract_size: ${{ steps.filesizes.outputs.image }}
-          extract_sha256: ${{ steps.checksums.outputs.image }}
+          extract_sha256: '"${{ steps.checksums.outputs.image }}"'
           image_download_size: ${{ steps.filesizes.outputs.zip }}
-          image_download_sha256: ${{ steps.checksums.outputs.zip }}
+          image_download_sha256: '"${{ steps.checksums.outputs.zip }}"'
         with:
           result-encoding: string
           script: |
